# aimz

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  array_dataset_copy.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  dependabot.yml
.github/workflows/: ci.yaml  coverage.yaml  draft-pdf.yaml  gh-pages.yaml  publish-to-pypi.yaml  publish.yaml  ruff.yaml  test-coverage.yaml
aims/data/: __init__.py  _sharding.py  array_loader.py
aims/model/: __init__.py  _core.py  impact_model.py
aims/utils/: _validation.py
aimz/: __init__.py
aimz/data/: array_dataset.py  array_loader.py
aimz/mlflow/: __init__.py  autolog.py  log.py  pyfunc.py  save.py
aimz/model/: _core.py  _streaming.py  impact_model.py
aimz/sampling/: _forward.py
aimz/utils/: _format.py  _kwargs.py  _log_likelihood.py  _output.py  _validation.py
aimz/utils/data/: _input_setup.py  _sharding.py  array_dataset.py  array_loader.py  collate.py
array_dataset/: index.html
array_loader/: index.html
changelog/: index.html
docs/: array_dataset.md  array_loader.md  impact_model.md  index.md  installation.md  model_persistence.md  requirements.txt  train.dill  wip.md
docs/notebook/: model_persistence.ipynb  test.ipynb
docs/notebooks/: disk_and_on_batch.ipynb  mcmc.ipynb  model_persistence.ipynb  sampling.ipynb  tutorial.ipynb
docs/source/: __init__.py  api.rst  changelog.rst  conf.py  faq.rst  index.rst
docs/source/_static/: style.css
docs/source/api/: array_dataset.rst  array_loader.rst  impact_model.rst  kernel_spec.rst  mlflow.rst
docs/source/development/: citation.rst  contributing.rst  index.rst
docs/source/examples/: criteo.rst  hillstrom.rst  index.rst  lalonde.rst
docs/source/getting_started/: index.rst  installation.md  tutorial.rst
docs/source/user_guide/: cleanup.rst  dataloader.rst  disk_and_on_batch.rst  index.rst  installation.rst  intervention.rst  mcmc.rst  mlflow.rst  model_persistence.rst  sampling.rst  sharding.rst
impact_model/: index.html
installation/: index.html
model_persistence/: index.html
notebook/: test.ipynb
paper/: paper.bib  paper.md
paper/benchmark/: README.md  bench_memory_predict.py  bench_memory_predictive.py  bench_time_predict.py  bench_time_predictive.py
search/: search_index.json
tests/: __init__.py  conftest.py  test_array_loader.py  test_cleanup_models.py  test_draw_loop_dispatch.py  test_estimate_effect.py  test_fit.py  test_fit_on_batch.py  test_input_setup.py  test_kernel.py  test_log_likelihood.py  test_mlflow.py  test_parallel_sample.py  test_predict.py  test_predict_on_batch.py  test_prng_state.py  test_sample.py  test_sample_posterior_predictive.py  test_sample_prior_predictive.py  test_sample_prior_predictive_on_batch.py  test_serialization.py  test_set_posterior_sample.py  test_shard_axis.py  test_train_on_batch.py  test_writer.py
wip/: index.html
