[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aimz"
version = "0.14.dev0"
description = "Scalable probabilistic impact modeling"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Eunseop Kim", email = "markean@pm.me" },
    { name = "Jirapat Samranvedhya", email = "jirapat.samranvedhya@lilly.com" },
]
maintainers = [{ name = "Eunseop Kim", email = "markean@pm.me" }]
requires-python = ">=3.11"
dependencies = [
    "dask>=2026.1",
    "jax>=0.10",
    "numpyro>=0.21",
    "psutil>=6",
    "xarray>=2026.1",
    "zarr>=3,<4",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
dev = [
    "mlflow>=3.10",
    "pre-commit>=4.6",
    "pytest>=9.1",
    "pytest-cov>=7.1",
    "ruff>=0.15",
]
gpu = ["jax[cuda13]>=0.10"]
mlflow = ["mlflow>=3.10"]
docs = [
    "arviz_base>=1; python_version >= '3.12'",
    "arviz_plots>=1; python_version >= '3.12'",
    "arviz_stats>=1; python_version >= '3.12'",
    "flax>=0.12",
    "jupyter-sphinx>=0.5",
    "mlflow>=3.10",
    "myst-parser>=5",
    "pydata-sphinx-theme>=0.17",
    "sphinx>=9",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.7",
]

[project.urls]
source = "https://github.com/markean/aimz"
documentation = "https://aimz.readthedocs.io/"

[tool.ruff]
line-length = 88
indent-width = 4
extend-exclude = []

[tool.ruff.lint]
select = ["ALL"]
ignore = []
pep8-naming = { ignore-names = ["*X*"] }
per-file-ignores = { "aimz/model/_core.py" = [
    "ANN001", # missing-type-function-argument
    "ANN003", # missing-type-kwargs
], "aimz/mlflow*" = [
    "ANN202",  # missing-return-type-private-function
    "ARG001",  # unused-function-argument
    "BLE001",  # blind-except
    "PLR0913", # too-many-arguments
    "PLC0415", # import-outside-top-level
], "docs*" = [
    "A001", # builtin-variable-shadowing
    "F401", # unused-import
], "tests*" = [
    "ARG001", # unused-function-argument
    "S101",   # assert
    "SLF001", # private-member-access
], "paper*" = [
    "INP001", # implicit-namespace-package
], "*.ipynb" = [
    "ERA001", # commented-out-code
    "T201",   # print
    "PD011",  # pandas-use-of-dot-values
    "PD901",  # pandas-df-variable-name
    "D101",   # undocumented-public-class
    "D102",   # undocumented-public-method
    "D103",   # undocumented-public-function
    "D107",   # undocumented-public-init
    "D417",   # undocumented-param
    "S101",   # assert
    "F811",   # redefined-while-unused
] }
pydocstyle = { convention = "google" }
pylint = { max-args = 10 }

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.setuptools.packages.find]
include = ["aimz*"]
namespaces = false
